# geo-crossings

./: .gitignore  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
as_slice/: all.html  index.html  trait.AsMutSlice.html  trait.AsSlice.html
benches/: boolean-ops.rs  mono-raster.rs  perf-line-crossings.rs  prof-rasterize.rs  rand-line-crossings.rs
book/: 404.html  index.html  line-crossings.html  print.html  searchindex.js  searchindex.json
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html
docs/: book.toml
geo/: all.html  enum.Closest.html  enum.Geometry.html  index.html  macro.geometry_delegate_impl.html  macro.line_string.html  macro.point.html  macro.polygon.html  sidebar-items.js  struct.Coordinate.html  struct.GeometryCollection.html  struct.Line.html  struct.LineString.html  struct.MultiLineString.html  struct.MultiPoint.html  struct.MultiPolygon.html  struct.Point.html  struct.Polygon.html  struct.Rect.html  struct.Triangle.html  trait.CoordFloat.html  trait.CoordNum.html  trait.GeoFloat.html  trait.GeoNum.html  trait.ToGeo.html
geo_crossings/: all.html  fn.monotone_chains.html  index.html  sidebar-items.js  struct.Sweep.html  struct.SweepPoint.html
geo_types/: all.html  enum.Error.html  enum.Geometry.html  index.html  macro.line_string.html  macro.point.html  macro.polygon.html  sidebar-items.js  struct.Coordinate.html  struct.Line.html  (+14 more)
(+11206 files in other folders)
