[package]
name = "geo-crossings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.3"
geo = "0.18.0"
log = "0.4.14"
rstar = "0.8.3"

[dev-dependencies]
env_logger = "0.8.4"
criterion = "0.3.4"
rand = "0.8.4"
rand_distr = "0.4.1"
geo-types = { version = "0.7.2", features = [ "rstar" ] }

[[bench]]
name = "rand-line-crossings"
harness = false
