[package]
name = "geo-crossings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.3"
geo = "0.18.0"
log = "0.4.14"
rstar = "0.8.3"
pin-project-lite = "0.2.8"
smallvec = "1.8.0"

[dev-dependencies]
env_logger = "0.8.4"
criterion = "0.3.4"
rand = "0.8.4"
rand_distr = "0.4.1"
geo-types = { version = "0.7.2", features = [ "rstar" ] }
approx = "0.5.1"

[[bench]]
name = "rand-line-crossings"
harness = false

[[bench]]
name = "perf-line-crossings"
harness = false

[profile.bench]
debug = true
